Circle fixed to min-width. Stops squishing

--- a/styles/ImageCircle.module.css
+++ b/styles/ImageCircle.module.css
@@ -2,7 +2,7 @@
   --border: 1.5rem;
   --size: 14rem;
   height: calc(var(--size) + var(--border) * 2);
-  width: calc(var(--size) + var(--border) * 2);
+  min-width: calc(var(--size) + var(--border) * 2);
   position: relative;
 }
 
